--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Iroanusi Ukachukwu
-logo assets/FB_IMG_15856909080009417.jpg
+logo: assets/FB_IMG_15856909080009417.jpg
 theme: jekyll-theme-minimal
